commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <body>
-        <h1>aqui vamos a hacer blog post</h1>
-        <p>y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo
+                    atractivo e interesante del
+                    post</h1>
+                <p>y este es el parrafo de 
+                inicio donde vamos a explocar las cosas increbiles
+                que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </body>
 </html>
