--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,9 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                
+                <span id="tagline">
+                    tu blog maestro
+                </span>
             </div>
             <div id="post">
                 <h1>Este es el titulo
@@ -21,6 +23,7 @@
                 <p>y este es el parrafo de 
                 inicio donde vamos a explocar las cosas increbiles
                 que se pueden hacer con ramas</p>
+                <p>suscribete y dale like</p>
             </div>
         </div>
     </body>
